--- a/pages/about.html
+++ b/pages/about.html
@@ -23,59 +23,28 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <div>
-            <section class="section about-section">
-                <div class="section-content">
-                    <h1>Work Experience</h1>
-                    <p>
-                        Hi, I'm Alexandra Shbaro, a Junior Functional Consultant with experience in appraising modules,
-                        conducting detailed requirements analysis, and process optimization. 
-                    </p>
-                    <p>I'm passionate about web development and eager to apply my analytical skills to build impactful solutions.</p>
-                    <p>
-                        I have worked on various personal and freelance projects, including the development of
-                        e-commerce
-                        websites and educational platforms.
-                    </p>
-                </div>
-            </section>
-            <section class="education section education-section">
-                <div class="section-content">
-                    <h2>Education</h2>
-                    <p>BSc in Computer Science</p>
-                    <p>Beirut Arab University, Beirut, Lebanon</p>
-                    <p>Graduated: June 2023</p>
-                </div>
-            </section>
-        </div>
-        <section class="skills">
-            <h1>My Skills</h1>
-            <div class="skills-container">
-                <div class="skill">
-                    <img src="images/html.png" alt="HTML 5">
-                    <p>HTML / CSS</p>
-                </div>
-                <div class="skill">
-                    <img src="images/react.png" alt="React JS">
-                    <p>React JS</p>
-                </div>
-                <div class="skill">
-                    <img src="images/python.png" alt="Python">
-                    <p>Python</p>
-                </div>
-                <div class="skill">
-                    <img src="images/mysql.png" alt="MySQL">
-                    <p>MySQL</p>
-                </div>
-                <div class="skill">
-                    <img src="images/php.png" alt="PHP">
-                    <p>PHP</p>
-                </div>
+            <div>
+                <section class="section about-section">
+                    <div class="section-content">
+                        <h1>A Little About Me</h1>
+                        <p>
+                            I am Alexandra Shbaro, and I am currently transitioning into a career in web development, 
+                            which has always been my passion.
+                        </p>
+                        
+                        <p>
+                            After working in another field, I realized that my true interest lies in creating 
+                            and building interactive web experiences.
+                        </p>
+
+                        <p> 
+                            That is why I am excited to be joining SE Factory, where I will be learning new skills, 
+                            exploring the world of coding, and embarking on this journey to become a proficient web developer.
+                        </p>
+                       
+                    </div>
+                </section>
             </div>
-            <a href="/files/AlexandraCV.pdf" class="purple-button" download>Download My Resume</a>
-        </section>
-    </main>
     <footer>
         <p>&copy; 2024 Alexandra Shbaro</p>
     </footer>
