--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,7 +25,8 @@
         <section class="contact-container">
             <div class="contact-form">
                 <h1>Contact Me</h1>
-                <form action="submit_form.php" method="post">
+                <!-- the form does not submit anything since I only wanted to use vanilla HTML and CSS for this project-->
+                <form method="post">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" required>
 
@@ -40,12 +41,12 @@
                 <div class="additional-contact-info">
                     <p>
                         <strong>Contact</strong>
-                        <a href="mailto:alexandra-shebaro@hotmail.com">alexandra-shebaro@hotmail.com</a>
+                        <a href="mailto:alexandrashbaro@gmail.com">alexandrashbaro@gmail.com</a>
                     </p>
                 </div>
             </div>
             <div class="contact-image">
-                <img class="avatar-image" src="/images/coder-avatar.png" alt="Girl Avatar">
+                <img class="avatar-image" src="./images/coder-avatar.png" alt="Girl Avatar">
             </div>
         </section>
     </main>
