--- a/pages/index.html
+++ b/pages/index.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <section class="section index-section">
-            <img class="avatar-girl" src="/images/coder-avatar.png">
+            <img class="avatar-girl" src="./images/coder-avatar.png">
             <div class="section-content">
                 <h1>Hi, I'm <span>Alexandra</span> !</h1>
                 <h1>Nice to meet you ...</h1>
@@ -35,6 +35,57 @@
                 <a href="about.html" class="black-button"> &#x2192; Learn More About Me</a>
             </div>
         </section>
+            <div class="center">
+                <section class="section about-section">
+                    <div class="section-content">
+                        <h1>Work Experience</h1>
+                        <p>
+                            Hi, I'm Alexandra Shbaro, a Junior Functional Consultant with experience in appraising modules,
+                            conducting detailed requirements analysis, and process optimization. 
+                        </p>
+                        <p>I'm passionate about web development and eager to apply my analytical skills to build impactful solutions.</p>
+                        <p>
+                            I have worked on various personal and freelance projects, including the development of
+                            e-commerce
+                            websites and educational platforms.
+                        </p>
+                    </div>
+                </section>
+                <section class="section education-section">
+                    <div class="section-content">
+                            <h1>Education</h1>
+                            <p>BSc in Computer Science</p>
+                            <p>Beirut Arab University, Beirut, Lebanon</p>
+                            <p>Graduated: June 2023</p>
+                    </div>
+                </section>
+            </div>
+            <section class="skills">
+                <h1>My Skills</h1>
+                <div class="skills-container">
+                    <div class="skill">
+                        <img src="./images/html.png" alt="HTML 5">
+                        <p>HTML / CSS</p>
+                    </div>
+                    <div class="skill">
+                        <img src="./images/react.png" alt="React JS">
+                        <p>React JS</p>
+                    </div>
+                    <div class="skill">
+                        <img src="./images/react.png" alt="Python">
+                        <p>Python</p>
+                    </div>
+                    <div class="skill">
+                        <img src="./images/mysql.png" alt="MySQL">
+                        <p>MySQL</p>
+                    </div>
+                    <div class="skill">
+                        <img src="./images/php.png" alt="PHP">
+                        <p>PHP</p>
+                    </div>
+                </div>
+                <a href="./files/AlexandraCV.pdf" class="purple-button" download>Download My Resume</a>
+            </section>
     </main>
     <footer>
         <p>&copy; 2024 Alexandra Shbaro</p>
